--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+            	<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/space.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Space Invaders Game</h3>
+                        <p>
+                            Created a space invaders game using javascript and opengl.  Final project for CS174a project.  Completely iteractive with shooting and collision detection, as well as particle effects and lives.
+                        </p>
+                        <a href="https://github.com/lukehjung/IDEA-Hacks-Motion-Sensor" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/hack.jpg" />
