--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/simpsh.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>SIMPSH</h3>
+                        <p>
+                            Generated a simple shell processor, similar to bash through C code for CS111, Computer Operating Systems.
+                        </p>
+                        <a href="https://github.com/lukehjung/SIMPSH" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
             	<div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/space.jpg" />
