--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Luke Jung</h1>
             <h2>UCLA Computer Science</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://www.dropbox.com/s/s361wotkvpir86v/Luke-Resume.pdf?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
