--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <h4>Lead Assistant Desktop Support Analyst</h4>
                 <p>
                     <ul>
-                    <li>Leads 5 other student workers in completing necessary tasks around IT Department, including Windows/Mac imaging, active directory management, network patching, and miscellaneous Desktop needs.</li>
-                    <li>Supports multiple departments around Campus, specializing in hardware management and software issues.</li>
+                    <li>Leads 5 other student workers in assigning tasks, managing schedules and ensuring different jobs are completed, in charge of around 60+ tasks each day to satisfy multiple department needs.</li>
+                    <li>Supports multiple issues, including Windows/Mac imaging through IBM BigFix, active directory management, installation of network servers in UCLA’s server, hardware installation and setup, and general software troubleshooting.</li>
                     </ul>
                 </p>
             </div>
