--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Luke Jung</h1>
             <h2>UCLA Computer Science</h2>
-            <a href="https://www.dropbox.com/s/uat0wqxnxpuxdo8/Luke-Resume-September.pdf?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="https://www.dropbox.com/s/uat0wqxnxpuxdo8/Luke-Resume.pdf?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -88,7 +88,17 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="February 2019 – Present">
+	    <div data-date="January 2020 – Present">
+                <h3>UCLA Strategic Communications Web Development</h3>
+                <h4>Student Web Developer</h4>
+                <p>
+                    <ul>
+                    <li>Help to develop features and maintain 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
+                    </ul>
+                </p>
+            </div>
+	    
+            <div data-date="February 2019 – January 2020">
                 <h3>UCLA IT Services</h3>
                 <h4>Lead Assistant Desktop Support Analyst</h4>
                 <p>
@@ -151,6 +161,21 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/simpsh.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>PLAY-NOW</h3>
+                        <p>
+			Created a Ruby website and uploaded on AWS to watch YouTube Videos concurrently. Multiple users are able
+			to come onto the website, play, pause, and change the timestamp to watch videos.                        
+			</p>
+                        <a href="https://github.com/scalableinternetservices/play-now" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/simpsh.jpg" />
