--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
             <div class="row">
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/simpsh.jpg" />
+                        <img src="images/youtube.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>PLAY-NOW</h3>
                         <p>
-			Created a Ruby website and uploaded on AWS to watch YouTube Videos concurrently. Multiple users are able
-			to come onto the website, play, pause, and change the timestamp to watch videos.                        
-			</p>
+            			Created a Ruby website and uploaded on AWS to watch YouTube Videos concurrently. Multiple users are able
+            			to come onto the website, play, pause, and change the timestamp to watch videos.                        
+			         </p>
                         <a href="https://github.com/scalableinternetservices/play-now" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -258,6 +258,11 @@
             <li>Linux</li>
             <li>Jekyll</li>
             <li>Gulp</li>
+            <li>OCaml</li>
+            <li>Prolog</li>
+            <li>Scheme</li>
+            <li>Ruby</li>
+            <li>AWS</li>
         </ul>
     </div>
     <!-- End #skills -->
