--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <br>
                         While I'm not busy studying or working on projects, I'm usually out with friends around LA, traveling and trying to find the next best restaurant. I also love to read books on Philosophy, find new places to eat, and travel.<br>
                         <br>
-                        I enjoy spending time with new people and finding new ways to do things for them. I love a good laugh and conversations over coffee. 
+                        I enjoy spending time with new people and finding new ways to do things for them. I love a good laugh and conversations over coffee.
                     </p>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                     </ul>
                 </p>
             </div>
-	    
+
             <div data-date="February 2019 – January 2020">
                 <h3>UCLA IT Services</h3>
                 <h4>Lead Assistant Desktop Support Analyst</h4>
@@ -127,7 +127,7 @@
                     <li>Analyzed data from businesses using Wolfram’s programming language Mathematica to create advanced business models for CEO’s consideration for implementation.</li>
                     <li>Developed more efficient ways of writing files by using specific formats and protocols such as detailed headers and well-documented code to promote clarity and intent of each file.</li>
                     </ul>
-                </p>            
+                </p>
             </div>
         </div>
     </div>
@@ -170,7 +170,7 @@
                         <h3>PLAY-NOW</h3>
                         <p>
             			Created a Ruby website and uploaded on AWS to watch YouTube Videos concurrently. Multiple users are able
-            			to come onto the website, play, pause, and change the timestamp to watch videos.                        
+            			to come onto the website, play, pause, and change the timestamp to watch videos.
 			         </p>
                         <a href="https://github.com/scalableinternetservices/play-now" target="_blank">View Project</a>
                     </div>
@@ -263,6 +263,7 @@
             <li>Scheme</li>
             <li>Ruby</li>
             <li>AWS</li>
+            <li>PHP</li>
         </ul>
     </div>
     <!-- End #skills -->
