update playnow link

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             			Created a Ruby website and uploaded on AWS to watch YouTube Videos concurrently. Multiple users are able
             			to come onto the website, play, pause, and change the timestamp to watch videos.
 			         </p>
-                        <a href="https://github.com/scalableinternetservices/play-now" target="_blank">View Project</a>
+                        <a href="https://github.com/lukehjung/play-now" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
