--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                 <h4>Student Web Developer</h4>
                 <p>
                     <ul>
-                    <li>Help to develop features and maintain 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
+                    <li> Develop features and maintain 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
+                    <li>●Utilize technologies such as Jira, Gitbucket, PHP, Laravel, Node.js, Docker, and MAMP.</li>
                     </ul>
                 </p>
             </div>
@@ -264,6 +265,9 @@
             <li>Ruby</li>
             <li>AWS</li>
             <li>PHP</li>
+            <li>Git</li>
+            <li>Jira</li>
+            <li>Agile/Scrum Workflow</li>
         </ul>
     </div>
     <!-- End #skills -->
