--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p>
                     <ul>
                     <li> Develop features and maintain 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
-                    <li>Utilize technologies such as Jira, Gitbucket, PHP, Laravel, Node.js, Docker, and MAMP.</li>
+                    <li>Utilize technologies such as Jira, Bitbucket, PHP, Laravel, Node.js, Docker, and MAMP.</li>
                     </ul>
                 </p>
             </div>
