--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Luke Jung</h1>
             <h2>UCLA Computer Science</h2>
-            <a href="https://www.dropbox.com/s/uat0wqxnxpuxdo8/Luke-Resume.pdf?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="https://www.dropbox.com/s/fpstol92xldrg6k/Luke-Resume.pdf?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -93,8 +93,9 @@
                 <h4>Student Web Developer</h4>
                 <p>
                     <ul>
-                    <li> Develop features and maintain 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
-                    <li>Utilize technologies such as Jira, Bitbucket, PHP, Laravel, Node.js, Docker, and MAMP.</li>
+                        <li>Develops features and maintains 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
+                        <li>Practices professional Git workflow with Bitbucket, real world experience with pull requests and branching.</li>
+                        <li>Writes websites in PHP, built on Laravel and Node.js framework, and hosted on Docker or MAMP.</li>
                     </ul>
                 </p>
             </div>
@@ -141,7 +142,7 @@
             <span class="education-date">Sept 2017 - June 2021</span>
             <h4>Bachelor of Science in Computer Science, GPA 3.7</h4>
             <p>
-                Relevant Coursework: Linear Algebra, Differential Equations, Discrete Math, Logic in Digital Designs, Fundamentals of Computer Science, Data Abstraction, Computer Architecture, Operating Systems, Computer Graphics, Algorithms, Statistics.
+                Relevant Coursework: Fundamentals of Computer Science, Data Abstraction, Computer Architecture, Operating Systems, Computer Graphics, Algorithms, Statistics, Computer Languages, Data Science.
             </p>
         </div>
         <!-- End .education-block -->
@@ -162,7 +163,20 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
-		<div class="project shadow-large">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/youtube.png" /></div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>RateMyTA</h3>
+                        <p>
+                        Generated a Python Flask website to rate different TAs on campus utilizing Google Firebase for data storage and Materialize package for Front End.
+                        </p>
+                        <a href="https://github.com/cs188-software-design-security-w20/project-paul-eggtart" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+		      <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/youtube.png" />
                     </div>
