--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/youtube.png" /></div>
+                        <img src="images/ratemyta.png" /></div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>RateMyTA</h3>
