--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
             <li>Git</li>
             <li>Jira</li>
             <li>Agile/Scrum Workflow</li>
+            <li>Google Cloud</li>
+            <li>Docker Deployment</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -299,7 +301,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2019 Luke Jung
+                        Copyright &copy; 2020 Luke Jung
                     </p>
                 </div>
                 <div class="col-sm-2 top">
