--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Luke Jung</h1>
             <h2>UCLA Computer Science</h2>
-            <a href="https://www.dropbox.com/s/fpstol92xldrg6k/Luke-Resume.pdf?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="https://www.dropbox.com/s/tky66wi4u584ry7/Luke-Resume.docx?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -93,9 +93,11 @@
                 <h4>Student Web Developer</h4>
                 <p>
                     <ul>
-                        <li>Develops features and maintains 25 UCLA marketing web properties including UCLA.edu, The Optimists, GiveTo, Office of the Chancellor, UCLA Brand Guidelines, Bruin Day, and Happenings.</li>
-                        <li>Practices professional Git workflow with Bitbucket, real world experience with pull requests and branching.</li>
-                        <li>Writes websites in PHP, built on Laravel and Node.js framework, and hosted on Docker or MAMP.</li>
+                       <li>Develops features for 25 UCLA marketing web properties including main ucla.edu and other branding sites.</li>
+                        <li> Edits websites written in PHP, built on Laravel framework, and deployed with Docker and AWS. </li>
+                        <li> Practices professional Git workflow using Jira suite, well versed in QA work and merging branches. </li>
+                        <li> Works with a team of 9 other developers to update websites in weekly sprints.  Actively communicate with Product Managers to ensure updates are on time and adjusted when needed. </li>
+
                     </ul>
                 </p>
             </div>
@@ -163,6 +165,23 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/ucla.png" /></div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>UCLA Capstone Project</h3>
+                        <p>
+                            <li> Built a webserver with a team of 4 students using C++ to parse a Nginx configuration file for our Software Engineering Class taught by 4 Google Engineers emphasizing good software engineering practices. </li>
+                            <li> Practiced scalable software engineering practices such as thorough unit testing, refactoring, and leading the group as a tech lead.  Utilized Google Git Gerrit for code review and Docker with Google Cloud for deployment. </li>
+                            <li> Implemented features such as proxies, reverse proxies, hosting files, and monitoring in a continuous build. </li>
+                        </p>
+                        <a href="https://github.com/cs188-software-design-security-w20/project-paul-eggtart" target="_blank">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+              <div class="project shadow-large">
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/ratemyta.png" /></div>
