updated new job

--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+            <div data-date="July 2020 – Present">
+                <h3>UCLA Anderson, Graduate School of Management</h3>
+                <h4>Student Web Developer</h4>
+                <p>
+                    <ul>
+                       <li>●    Migrating current site to WordPress, writing scripts and using WebCrawler’s to handle article migration.  </li>
+                    </ul>
+                </p>
+            </div>
 	    <div data-date="January 2020 – Present">
                 <h3>UCLA Strategic Communications Web Development</h3>
                 <h4>Student Web Developer</h4>
