deleted bullet point

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h4>Student Web Developer</h4>
                 <p>
                     <ul>
-                       <li>●    Migrating current site to WordPress, writing scripts and using WebCrawler’s to handle article migration.  </li>
+                       <li>Migrating current site to WordPress, writing scripts and using WebCrawler’s to handle article migration.  </li>
                     </ul>
                 </p>
             </div>
@@ -102,7 +102,7 @@
                 <h4>Student Web Developer</h4>
                 <p>
                     <ul>
-                       <li>Develops features for 25 UCLA marketing web properties including main ucla.edu and other branding sites.</li>
+                       <li> Develops features for 25 UCLA marketing web properties including main ucla.edu and other branding sites.</li>
                         <li> Edits websites written in PHP, built on Laravel framework, and deployed with Docker and AWS. </li>
                         <li> Practices professional Git workflow using Jira suite, well versed in QA work and merging branches. </li>
                         <li> Works with a team of 9 other developers to update websites in weekly sprints.  Actively communicate with Product Managers to ensure updates are on time and adjusted when needed. </li>
