new resume sept

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Luke Jung</h1>
             <h2>UCLA Computer Science</h2>
-            <a href="https://www.dropbox.com/s/tky66wi4u584ry7/Luke-Resume.docx?dl=0" target="_blank" class="btn-rounded-white">Download Resume</a>
+            <a href="/files/Luke-Resume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,11 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am currently a UCLA undergraduate student studying Computer Science. I'm a proud born and raised San Diego native, growing near beautiful beaches and amazing weather all year long. I love to solve new problems, finish challenging projects, as well as continually learn something each day.<br>
-                        <br>
-                        While I'm not busy studying or working on projects, I'm usually out with friends around LA, traveling and trying to find the next best restaurant. I also love to read books on Philosophy, find new places to eat, and travel.<br>
-                        <br>
-                        I enjoy spending time with new people and finding new ways to do things for them. I love a good laugh and conversations over coffee.
+                      I am currently a Senior at UCLA studying Computer Science. I'm looking for Internships and Full-time positions this
+                      coming year. I have strong experience in web development including using Flask, Rails, Docker, Wordpress, and PHP. Ready
+                      to take on any new challenges and projects.
                     </p>
                 </div>
             </div>
@@ -93,7 +91,8 @@
                 <h4>Student Web Developer</h4>
                 <p>
                     <ul>
-                       <li>Migrating current site to WordPress, writing scripts and using WebCrawler’s to handle article migration.  </li>
+                       <li>Migrating current Anderson site to WordPress framework. In charge of migrating 250+ articles, 900+ researchers, and
+                      transferring content using of Python scripts and edited with HTML and CSS.</li>
                     </ul>
                 </p>
             </div>
@@ -121,27 +120,6 @@
                     </ul>
                 </p>
             </div>
-
-            <div data-date="October 2018 – January 2019">
-                <h3>Northern Lights Coffee Shop</h3>
-                <h4>Barista</h4>
-                <p>
-                    <ul>
-                        <li>Worked part-time as a student worker at an on-campus coffee shop, handling the cash register, creating and serving drinks to customers.</li>
-                    </ul>
-                </p>
-            </div>
-
-            <div data-date="Summer 2016">
-                <h3>Augment</h3>
-                <h4>Intern</h4>
-                <p>
-                    <ul>
-                    <li>Analyzed data from businesses using Wolfram’s programming language Mathematica to create advanced business models for CEO’s consideration for implementation.</li>
-                    <li>Developed more efficient ways of writing files by using specific formats and protocols such as detailed headers and well-documented code to promote clarity and intent of each file.</li>
-                    </ul>
-                </p>
-            </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -151,9 +129,9 @@
         <div class="education-block">
             <h3>University of California, Los Angeles</h3>
             <span class="education-date">Sept 2017 - June 2021</span>
-            <h4>Bachelor of Science in Computer Science, GPA 3.7</h4>
+            <h4>Bachelor of Science in Computer Science, GPA 3.6</h4>
             <p>
-                Relevant Coursework: Fundamentals of Computer Science, Data Abstraction, Computer Architecture, Operating Systems, Computer Graphics, Algorithms, Statistics, Computer Languages, Data Science.
+                Relevant Coursework: Fundamentals of Computer Science, Data Abstraction, Computer Architecture, Operating Systems, Computer Graphics, Algorithms, Statistics, Computer Languages, Data Science, Networking.
             </p>
         </div>
         <!-- End .education-block -->
