--- a/index.html
+++ b/index.html
@@ -185,28 +185,20 @@
         <div class="row">
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/ucla.png" />
+              <a
+                href="https://github.com/cs188-software-design-security-w20/project-paul-eggtart"
+                target="_blank"
+                ><img src="images/ucla.png" />
+              </a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
               <h3>UCLA Capstone Project</h3>
               <p>
-                <li>
-                  Built a webserver with a team of 4 students using C++ to parse
-                  a Nginx configuration file for our Software Engineering Class
-                  taught by 4 Google Engineers emphasizing good software
-                  engineering practices.
-                </li>
-                <li>
-                  Practiced scalable software engineering practices such as
-                  thorough unit testing, refactoring, and leading the group as a
-                  tech lead. Utilized Google Git Gerrit for code review and
-                  Docker with Google Cloud for deployment.
-                </li>
-                <li>
-                  Implemented features such as proxies, reverse proxies, hosting
-                  files, and monitoring in a continuous build.
-                </li>
+                Built a webserver with a team of 4 students using C++ to parse a
+                Nginx configuration file for our Software Engineering Class
+                taught by 4 Google Engineers emphasizing good software
+                engineering practices.
               </p>
               <a
                 href="https://github.com/cs188-software-design-security-w20/project-paul-eggtart"
@@ -218,7 +210,12 @@
           </div>
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/ratemyta.png" />
+              <a
+                href="https://github.com/cs188-software-design-security-w20/project-paul-eggtart"
+                target="_blank"
+              >
+                <img src="images/ratemyta.png" />
+              </a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -238,7 +235,9 @@
           </div>
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/youtube.png" />
+              <a href="https://github.com/lukehjung/play-now" target="_blank">
+                <img src="images/youtube.png" />
+              </a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -256,7 +255,9 @@
           </div>
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/simpsh.jpg" />
+              <a href="https://github.com/lukehjung/SIMPSH" target="_blank"
+                ><img src="images/simpsh.jpg"
+              /></a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -273,7 +274,12 @@
           </div>
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/space.jpg" />
+              <a
+                href="https://github.com/lukehjung/Space-Invaders"
+                target="_blank"
+              >
+                <img src="images/space.jpg" />
+              </a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -293,7 +299,12 @@
           </div>
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/hack.jpg" />
+              <a
+                href="https://github.com/lukehjung/IDEA-Hacks-Motion-Sensor"
+                target="_blank"
+              >
+                <img src="images/hack.jpg" />
+              </a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -315,7 +326,12 @@
 
           <div class="project shadow-large">
             <div class="project-image">
-              <img src="images/googlehome.jpg" />
+              <a
+                href="https://github.com/lukehjung/WolframAlpha-GoogleHome-Integration"
+                target="_blank"
+              >
+                <img src="images/googlehome.jpg" />
+              </a>
             </div>
             <!-- End .project-image -->
             <div class="project-info">
@@ -354,12 +370,9 @@
         <li>CSS</li>
         <li>Mathematica</li>
         <li>R</li>
-        <li>Windows Active Directory</li>
         <li>MacOS</li>
         <li>Linux</li>
         <li>Jekyll</li>
-        <li>Gulp</li>
-        <li>OCaml</li>
         <li>Prolog</li>
         <li>Scheme</li>
         <li>Ruby</li>
@@ -370,18 +383,19 @@
         <li>Agile/Scrum Workflow</li>
         <li>Google Cloud</li>
         <li>Docker Deployment</li>
+        <li>React</li>
+        <li>NodeJS</li>
       </ul>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
       <h2 class="heading">Contact</h2>
-      <div>
-        <p>
-          Email: lukejung@ucla.edu<br />
-          Phone Number: 858-342-6779
-        </p>
-      </div>
+      <br />
+      <h3 class="heading">
+        Email: lukejung@ucla.edu<br />
+        Phone Number: 858-342-6779
+      </h3>
     </div>
 
     <footer>
