--- a/index.html
+++ b/index.html
@@ -75,18 +75,14 @@
     <div id="about">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <h2 class="heading">About Me</h2>
-          </div>
-          <div class="col-md-8">
-            <p>
-              I am currently a Senior at UCLA studying Computer Science. I'm
-              looking for Internships and Full-time positions this coming year.
-              I have strong experience in web development including using Flask,
-              Rails, Docker, Wordpress, and PHP. Ready to take on any new
-              challenges and projects.
-            </p>
-          </div>
+          <h2 class="heading">About Me</h2>
+          <p>
+            I am currently a Senior at UCLA studying Computer Science. I'm
+            looking for Internships and Full-time positions this coming year. I
+            have strong experience in web development including using Flask,
+            Rails, Docker, Wordpress, and PHP. Ready to take on any new
+            challenges and projects.
+          </p>
         </div>
       </div>
     </div>
@@ -241,7 +237,7 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>PLAY-NOW</h3>
+              <h3>Play-Now</h3>
               <p>
                 Created a Ruby website and uploaded on AWS to watch YouTube
                 Videos concurrently. Multiple users are able to come onto the
@@ -261,7 +257,7 @@
             </div>
             <!-- End .project-image -->
             <div class="project-info">
-              <h3>SIMPSH</h3>
+              <h3>Simp-Shell</h3>
               <p>
                 Generated a simple shell processor, similar to bash through C
                 code for CS111, Computer Operating Systems.
@@ -339,10 +335,7 @@
               <p>
                 Developed an app which connects Wolfram Alpha’s search engine to
                 communicate with a Google Home to solvevarious math problems
-                including derivatives and integrals.<br />
-                Created by writing a script in python hosted on Heroku that
-                communicated with Wolfram’s API to transfer data and process
-                through Diaglogflow’s machine learning modules.
+                including derivatives and integrals.
               </p>
               <a
                 href="https://github.com/lukehjung/WolframAlpha-GoogleHome-Integration"
