--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>Luke Jung</h1>
         <h2>UCLA Computer Science</h2>
         <a
-          href="/files/Luke-Resume.pdf"
+          href="./files/Luke-Jung-Resume.pdf"
           target="_blank"
           class="btn-rounded-white"
           >Download Resume</a
