small fix on bullets

--- a/index.html
+++ b/index.html
@@ -96,10 +96,16 @@
           <h4>Student Web Developer</h4>
           <ul>
             <li>
-              Migrated Anderson Review site to WordPress built on PHP and JavaScript. Wrote a Python script to transfer 250+ articles, 900+ researchers and saved hours of work as well as automate for future transitions.
+              Migrated Anderson Review site to WordPress built on PHP and
+              JavaScript. Wrote a Python script to transfer 250+ articles, 900+
+              researchers and saved hours of work as well as automate for future
+              transitions.
             </li>
             <li>
-                Updates Anderson Review by creating new blocks in WordPress in PHP, CMS entry in Ingeniux, and solving compatibility problems with JavaScript. Large focus on ADA issues and Mobile/Desktop responsiveness.
+              Updates Anderson Review by creating new blocks in WordPress in
+              PHP, CMS entry in Ingeniux, and solving compatibility problems
+              with JavaScript. Large focus on ADA issues and Mobile/Desktop
+              responsiveness.
             </li>
           </ul>
         </div>
@@ -155,7 +161,9 @@
         <span class="education-date">Sept 2017 - June 2021</span>
         <h4>Bachelor of Science in Computer Science, GPA 3.6</h4>
         <p>
-          Relevant Coursework: Data Structures, Algorithms, Networking, Computer Languages, Databases, Data Science, Machine Learning, Computer Architecture, Operating Systems, Computer Graphics, Computer Vision.
+          Relevant Coursework: Data Structures, Algorithms, Networking, Computer
+          Languages, Databases, Data Science, Machine Learning, Computer
+          Architecture, Operating Systems, Computer Graphics, Computer Vision.
         </p>
       </div>
       <!-- End .education-block -->
@@ -188,11 +196,17 @@
             <!-- End .project-image -->
             <div class="project-info">
               <h3>UCLA Capstone Project</h3>
-              <ul>
-                <li>Built a webserver with a team of 4 students using C++ to parse a Nginx configuration file for our Software Engineering Class taught by 4 Google Engineers emphasizing good software engineering practices.</li>
-                <li>Practiced scalable software development best practices such as thorough unit testing, functional testing, integration testing, refactoring, and leading the group as a tech lead. </li>
-                <li>Utilized Google Git Gerrit for code review and Docker with Google Cloud for deployment.</li>
-              </ul>
+              <p>
+                -Built a webserver with a team of 4 students using C++ to parse
+                a Nginx configuration file for our Software Engineering Class
+                taught by 4 Google Engineers emphasizing good software
+                engineering practices.<br />
+                -Practiced scalable software development best practices such as
+                thorough unit testing, functional testing, integration testing,
+                refactoring, and leading the group as a tech lead. <br />
+                -Utilized Google Git Gerrit for code review and Docker with
+                Google Cloud for deployment.<br />
+              </p>
               <a
                 href="https://github.com/lukehjung/cs130capstoneproject"
                 target="_blank"
