--- a/index.html
+++ b/index.html
@@ -203,9 +203,7 @@
                 engineering practices.<br />
                 -Practiced scalable software development best practices such as
                 thorough unit testing, functional testing, integration testing,
-                refactoring, and leading the group as a tech lead. <br />
-                -Utilized Google Git Gerrit for code review and Docker with
-                Google Cloud for deployment.<br />
+                refactoring, and leading the group as a tech lead.
               </p>
               <a
                 href="https://github.com/lukehjung/cs130capstoneproject"
