updated resume april

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="row">
           <h2 class="heading">About Me</h2>
           <p>
-            I am currently a Senior at UCLA studying Computer Science. I'm
-            looking for Internships and Full-time positions this coming year. I
-            have strong experience in web development including using Flask,
+            I am currently a Senior at UCLA studying Computer Science and an 
+            incoming Software Development Engineer at Amazon. 
+            I have strong experience in web development including using Flask,
             Rails, Docker, Wordpress, and PHP. Ready to take on any new
             challenges and projects.
           </p>
@@ -93,25 +93,24 @@
       <div id="experience-timeline">
         <div data-date="July 2020 – Present">
           <h3>UCLA Anderson, Graduate School of Management</h3>
-          <h4>Student Web Developer</h4>
+          <h4>Web Developer</h4>
           <ul>
             <li>
-              Migrated Anderson Review site to WordPress built on PHP and
-              JavaScript. Wrote a Python script to transfer 250+ articles, 900+
-              researchers and saved hours of work as well as automate for future
-              transitions.
+              Automated the migration of 250+ Anderson Review Articles and 900+ UCLA Faculty researcher profiles using
+              Python with compatibility for future content migration.
             </li>
             <li>
-              Updates Anderson Review by creating new blocks in WordPress in
-              PHP, CMS entry in Ingeniux, and solving compatibility problems
-              with JavaScript. Large focus on ADA issues and Mobile/Desktop
-              responsiveness.
+              Revamped Anderson Review Webpage using Wordpress built with PHP and Javascript.
+            </li>
+            <li>
+              Configured CMS entries using Ingeniux and resolved JavaScript compatibility issues with focus on ADA
+              accessibility and mobile/desktop responsive design.
             </li>
           </ul>
         </div>
         <div data-date="January 2020 – October 2020">
           <h3>UCLA Strategic Communications Web Development</h3>
-          <h4>Student Web Developer</h4>
+          <h4>Web Developer</h4>
           <ul>
             <li>
               Develops features for 25 UCLA marketing web properties including
