--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="lead">
       <div id="lead-content">
         <h1>Luke Jung</h1>
-        <h2>UCLA Computer Science</h2>
+        <h2>Amazon Software Development Engineer 1</h2>
         <a
           href="./files/Luke-Jung-Resume.pdf"
           target="_blank"
@@ -77,21 +77,36 @@
         <div class="row">
           <h2 class="heading">About Me</h2>
           <p>
-            I am currently a Senior at UCLA studying Computer Science and an 
-            incoming Software Development Engineer at Amazon. 
-            I have strong experience in web development including using Flask,
-            Rails, Docker, Wordpress, and PHP. Ready to take on any new
-            challenges and projects.
+            I am currently a Software Development Engineer at Amazon working on Prime Video Live Events. 
+            We develop mostly React web applications powered by a java backend.  I am interested in interesting 
+            projects especially in the gaming industy, email me any questions at lukethejung@gmail.com
           </p>
         </div>
-      </div>
-    </div>
     <!-- End #about -->
-
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="July 2020 – Present">
+        <div data-date="August 2021 – Present">
+          <h3>Amazon: Prime Video Live Events</h3>
+          <h4>Software Development Engineer 1</h4>
+          <ul>
+            <li>
+              Developing a React web application for Live Events Management Tool which begins a pipeline of publishing live events on Amazon including live sports and concerts through a java backend model.
+            </li>
+            <li>
+              Writing and reviewing code changes from team of 6 developers that include functional improvements, integration tests, unit tests, API calls, and front-end changes to increase functionality of tool for customers.
+            </li>
+            <li>
+              Ensuring operational excellence by participating in an on-call rotation to solve ongoing issues including system availability or code defects which are actively affecting customers.
+            </li>
+            <li>
+              Drafted and presented a design document on an internal project outlining the deprecation of a current system to integration with our current one and provided outlines and workflows for each task.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="experience-timeline">
+        <div data-date="July 2020 – July 2021">
           <h3>UCLA Anderson, Graduate School of Management</h3>
           <h4>Web Developer</h4>
           <ul>
